--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 
 servers:
-  - url: /api
+  - url: /
 
 components:
   schemas:
@@ -139,7 +139,7 @@ paths:
                   type: string
                   description: Password
               required:
-                - user
+                - password
                 - login
       responses:
         200:
@@ -158,7 +158,7 @@ paths:
     post:
       tags:
         - Signup
-      security: [ ]
+      security: []
       summary: Signup
       description: Signup a user
       requestBody:
@@ -189,7 +189,7 @@ paths:
           description: Bad request
         409:
           description: Conflict. Login already exists
-  /users:
+  /user:
     get:
       tags:
         - Users
@@ -239,13 +239,14 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /users/{userId}:
+  /user/{userId}:
     parameters:
       - name: userId
         in: path
         required: true
         schema:
           type: string
+          format: uuid
     get:
       tags:
         - Users
@@ -334,7 +335,7 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
-  /tracks:
+  /track:
     get:
       tags:
         - Track
@@ -388,9 +389,9 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /tracks/{id}:
+  /track/{trackId}:
     parameters:
-      - name: id
+      - name: trackId
         in: path
         required: true
         schema:
@@ -472,6 +473,10 @@ paths:
                     type: string
                     format: uuid
                     nullable: true
+                required:
+                  - id
+                  - name
+                  - duration
         400:
           description: Bad request. trackId is invalid (not uuid)
         401:
@@ -492,7 +497,7 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
-  /albums:
+  /album:
     get:
       tags:
         - Album
@@ -544,9 +549,9 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /albums/{id}:
+  /album/{albumId}:
     parameters:
-      - name: id
+      - name: albumId
         in: path
         required: true
         schema:
@@ -621,7 +626,7 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
-  /artists:
+  /artist:
     get:
       tags:
         - Artist
@@ -668,9 +673,9 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /artists/{id}:
+  /artist/{artistId}:
     parameters:
-      - name: id
+      - name: artistId
         in: path
         required: true
         schema:
@@ -755,9 +760,9 @@ paths:
                 $ref: '#/components/schemas/Favorites'
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /favs/track/{id}:
+  /favs/track/{trackId}:
     parameters:
-      - name: id
+      - name: trackId
         in: path
         required: true
         schema:
@@ -791,9 +796,9 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
-  /favs/album/{id}:
+  /favs/album/{albumId}:
     parameters:
-      - name: id
+      - name: albumId
         in: path
         required: true
         schema:
@@ -827,9 +832,9 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
-  /favs/artist/{id}:
+  /favs/artist/{artistId}:
     parameters:
-      - name: id
+      - name: artistId
         in: path
         required: true
         schema:
