--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 PORT=4000
+POSTGRES_PASSWORD=1234
+POSTGRES_USER=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=db
+POSTGRES_HOST=localhost
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
