--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - $PORT:$PORT
     links:
       - db
-    command: [sh, -c, "cd /app && npm run runMigration && npm run start:dev"]
+    command: [sh, -c, "cd /app && npm run start:dev"]
 
   db:
     build: tools/db
