--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ POSTGRES_USER=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=db
 POSTGRES_HOST=localhost
+DB_ADMINER_PORT=8080
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
