--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,15 @@ POSTGRES_USER=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=db
 POSTGRES_HOST=localhost
+DB_ADMINER_PORT=8080
+
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
+
+LOG_PATH=./logs
+LOG_FILE_SIZE_KB=10
+LOG_LEVEL=0
